tests/parsing/fail/pragma_missing_semi.circom
pragma circom 2.0.6

template T() {
}

component main = T();
